--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you:
+# If you need help with YAML syntax, here are some quick references for you: 
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -18,19 +18,29 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 码海泛舟
+title: 泛舟
+author: 泛舟
+tagline: A blog about software engineering.
 email: wangjunjie_lnnf@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  知其然，知其所以然
+  wangjunjie_lnnf | Blog
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://wangjunjie-lnnf.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: empty
-github_username:  wangjunjie-lnnf
-
+github_username: wangjunjie-lnnf
+highlighter: rouge
+svg:
+  optimize: true
 # Build settings
-theme: minima
+# theme: minima
+date_format: "%Y-%M-%D"
 plugins:
   - jekyll-feed
+category_dir: category/
+tag_dir: tag/
+
+minima:
+  social_links: 
+    github: wangjunjie-lnnf
 
 # Exclude from processing.
 # The following items will not be processed, by default.
