--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author: 泛舟
 tagline: A blog about software engineering.
 email: wangjunjie_lnnf@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  wangjunjie_lnnf | Blog
+  wangjunjie | Blog
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://wangjunjie-lnnf.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: wangjunjie-lnnf
